// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortByEditorRow component should render dimension row 1`] = `
<div
  className="css-15ix71y-InlineFieldRow padding-left-20"
>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              Dimension
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              time1Hour
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              Descending
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SortByEditorRow component should render metric row 1`] = `
<div
  className="css-15ix71y-InlineFieldRow padding-left-20"
>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              Metric
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-6-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              edgeHitsSum
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-6-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nmqu8c-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-7-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              Ascending
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id="react-select-7-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-zyjsuv-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
